[package]
name = "nodejs_rusty_repl"
description = "Run a Node.js Read Eval Print Loop from within Rust"
version = "0.1.0"
license = "MIT OR Apache-2.0"
edition = "2021"
keywords = ["nodejs", "repl", "interpreter", "testing", "javascript"]
categories = [
 "development-tools::testing",
 "parser-implementations",
 "compilers"
]

[dependencies]
async-process = "2.2.4"
derive_builder = "0.20.0"
futures-lite = "2.3.0"
serde_json = "1.0.125"
tempfile = "3.12.0"
thiserror = "1.0.63"
tokio = { version = "1.39.3", features = ["rt", "macros"] }
